src/objects/Naads_Asp_Daily_Visit_Metric__c.object
<CustomObject>
    <description>Records metrics for an ASP&apos;s visits on a daily basis</description>
    <fields>
        <fullName>Attendance_Sheet_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Attendance Sheet Count</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group_Trainings_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Group Trainings Count</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Visit_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Monthly Visit Count</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipName>Naads_Advisory_Form_Metrics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subcounty__c</fullName>
        <label>Subcounty</label>
        <picklist>
            <picklistValues>
                <fullName>Atiira</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kadungulu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pingire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Olio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bugondo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kateta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kyere</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labori</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serere Town Council</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kasilo Town council</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supervisory_Visit_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Supervisory Visit Count</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visit_Date__c</fullName>
        <label>Visit Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>NaadsAspDailyVisitMetric</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MN-{0000}</displayFormat>
        <label>Metric Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NaadsAspDailyVisitMetrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>